force-app/main/default/objects/Contract_Contact_Role__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>(Start_Date__c &lt;= today())  &amp;&amp; (( End_Date__c &gt; today() ) || isblank( End_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is de Contract Rol actief op basis van ingangsdatum en einddatum</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>