force-app/main/default/objects/Contract_Contact_Role__c/fields/Contract_Party__c.field-meta.xml
<CustomField>
    <fullName>Contract_Party__c</fullName>
    <description>What Contract Party is associated with this Contract Role?</description>
    <formula>Contract_Line__r.Contract_Party__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Welke Contractpartij is geassocieerd met deze Contract Rol?</inlineHelpText>
    <label>Contract Party</label>
    <type>Text</type>
</CustomField>