force-app/main/default/objects/Contract_Contact_Role__c/fields/Contract_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Contract_Subtype__c</fullName>
    <formula>text( Real_Estate_Contract__r.Contract_Sub_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Subtype</label>
    <type>Text</type>
</CustomField>